<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="210dp"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow" >

        <TextView
            android:id="@+id/dialogtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:background="@color/yellow"
            android:ellipsize="marquee"
            android:gravity="left|center"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:textColor="#000000"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imgclose"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/close" />
    </RelativeLayout>
    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/dialogimg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:scaleType="fitXY" />       

        <ListView
            android:id="@+id/dialoglist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp" />
    </LinearLayout>
    -->

    <ScrollView
        android:id="@+id/scrol1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reltitle"
        android:layout_marginTop="5dp" >

        <RelativeLayout
            android:id="@+id/reltext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/scrol1" >

            <TextView
                android:id="@+id/txtdata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_margin="5dp"
                android:text="@string/password_policy_uppercase"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtdata"
                android:layout_margin="5dp"
                android:text="@string/password_policy_lowercase"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:layout_margin="5dp"
                android:text="@string/password_policy_combination"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_margin="5dp"
                android:text="@string/password_policy_numbers"
                android:textColor="#ffffff" />
        
        
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_margin="5dp"
                android:text="@string/password_policy_length"
                android:textColor="#ffffff" />
        
        
             <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView4"
                android:layout_margin="5dp"
                android:text="@string/password_policy_spaces"
                android:textColor="#ffffff" />
        
              <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:layout_margin="5dp"
                android:text="@string/password_policy_lastFivePasswors"
                android:textColor="#ffffff" />
        
             
             
             
             
             
            
        </RelativeLayout>
    </ScrollView>

</LinearLayout>