<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.ttl.customersocialapp"
    android:id="@+id/manual_est_outside_container_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AppBlue"
    tools:context=".ManualServiceFragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_light_transparent" >

        <RelativeLayout
            android:id="@+id/container_layout"
            android:layout_width="match_parent"
            android:layout_height="170dp" >

            <Spinner
                android:id="@+id/manual_est_vehicle_spinner"
                android:layout_width="240dp"
                android:layout_height="35dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/anim_sipnner"
                android:gravity="center_horizontal" />

            <com.ttl.customersocialapp.FloatLabelLayout
                android:id="@+id/manual_est_state_spinner_floating"
                android:layout_width="145dp"
                android:layout_height="35dp"
                android:layout_alignLeft="@+id/manual_est_calculate_btn"
                android:layout_below="@+id/manual_est_vehicle_spinner"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/anim_sipnner"
                app:floatLabelTextAppearance="@style/myFloatLabel" >

                <com.ttl.customersocialapp.InstantAutoComplete
                    android:id="@+id/manual_est_state_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/manual_est_vehicle_spinner"
                    android:layout_marginTop="-25dp"
                    android:background="@drawable/anim_sipnner"
                    android:hint="Select State"
                    android:paddingTop="7dp"
                    android:inputType="text"
                    android:paddingLeft="10dp"
                  
                    android:textSize="12sp" />
            </com.ttl.customersocialapp.FloatLabelLayout>

            <Button
                android:id="@+id/manual_est_select_labour"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/manual_est_state_spinner_floating"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_submit"
                android:padding="4dp"
                android:text="@string/select_labour"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/manual_est_select_spares"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/manual_est_city_spinner_floating"
                android:layout_marginRight="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_submit"
                android:padding="4dp"
                android:text="@string/select_spares"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/manual_est_selected_items_header"
                android:layout_width="match_parent"
                android:layout_height="23dp"
                android:layout_below="@+id/manual_est_select_labour"
                android:layout_marginTop="21dp"
                android:background="@color/black" >

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/txtLabourSpareNote"
                    android:background="@color/white" />

                <TextView
                    android:layout_width="43dp"
                    android:layout_height="wrap_content"
                    
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/type"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="4dp"
                    android:layout_below="@+id/txtLabourSpareNote"
                    android:background="@color/white" />

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/desc"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="1dp"
                    android:layout_marginLeft="5dp"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/txtLabourSpareNote"
                    android:background="@color/white" />

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                   
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/qty"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="1dp"
                    
                    android:layout_height="match_parent"
                    android:layout_below="@+id/txtLabourSpareNote"
                    android:background="@color/white" />

                <TextView
                    android:layout_width="43dp"
                    android:layout_height="wrap_content"
                   
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/value"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="1dp"
                    android:layout_marginLeft="2dp"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/txtLabourSpareNote"
                    android:background="@color/white" />

                <TextView
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                  
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/edit"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="1dp"
                    
                    android:layout_height="match_parent"
                    android:layout_below="@+id/txtLabourSpareNote"
                    android:background="@color/white" />

                <TextView
                    android:layout_width="38dp"
                    android:layout_height="wrap_content"
               
                    android:gravity="center"
                    
                    android:text="@string/delete"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="1dp"    
                    android:layout_marginLeft="1dp"               
                    android:layout_height="match_parent"
                    android:layout_below="@+id/txtLabourSpareNote"
                    android:background="@color/white" />
            </LinearLayout>

            <ListView
                android:id="@+id/mnaual_est_selected_data_list"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_below="@+id/manual_est_selected_items_header"
                android:divider="@color/white"
                android:dividerHeight="1dp"
                android:fadeScrollbars="false"
                android:fastScrollEnabled="true"
                android:scrollbarSize="2dp"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbarThumbVertical="@color/yellow"
                android:scrollbars="vertical" >
            </ListView>

            <Button
                android:id="@+id/manual_est_email_btn"
                android:layout_width="100dp"
                android:layout_height="30dp"
               android:layout_marginLeft="220dp"
                android:layout_below="@+id/mnaual_est_selected_data_list"
                 android:layout_marginTop="65dp"
               
                android:layout_marginRight="5dp"
               
                android:background="@drawable/button_submit"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/manual_est_reset_btn"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_below="@+id/mnaual_est_selected_data_list"
                 android:layout_marginTop="65dp"
                android:layout_marginLeft="8dp"
               
                android:layout_toRightOf="@+id/manual_est_calculate_btn"
                android:background="@drawable/button_submit"
                android:text="@string/reset"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/manual_est_calculate_btn"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_below="@+id/mnaual_est_selected_data_list"
                 android:layout_marginTop="65dp"
                android:layout_marginLeft="5dp"
               
                android:background="@drawable/button_submit"
                android:text="@string/calculate"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/approx_spare_amt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/manual_est_select_labour"
                android:layout_alignTop="@+id/approx_labour_amt"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:text="@string/approx_spares_amt"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/approx_labour_amt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/approx_spare_amt"
                android:layout_below="@+id/mnaual_est_selected_data_list"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:text="@string/approx_labour_amt"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="bold" />

            <com.ttl.customersocialapp.FloatLabelLayout
                android:id="@+id/manual_est_city_spinner_floating"
                android:layout_width="145dp"
                android:layout_height="35dp"
                android:layout_alignTop="@+id/manual_est_state_spinner_floating"
                android:layout_marginLeft="165dp"
                android:background="@drawable/anim_sipnner"
                app:floatLabelTextAppearance="@style/myFloatLabel" >

                <com.ttl.customersocialapp.InstantAutoComplete
                    android:id="@+id/manual_est_city_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="-25dp"
                    android:background="@drawable/anim_sipnner"
                    android:hint="Select City"
                    android:inputType="text"
                    android:paddingTop="7dp"
                    android:paddingLeft="5dp"
                    android:textSize="12sp" />
            </com.ttl.customersocialapp.FloatLabelLayout>

            <TextView
                android:id="@+id/txtCalcalationNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/approx_spare_amt"
              
                android:gravity="center"
                android:text="@string/calculationNote"
                android:textColor="@color/white"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/txtLabourSpareNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/manual_est_select_labour"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/labourSpareNote"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <View
                android:id="@+id/view_manual_est_selected_items_header1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/txtLabourSpareNote"
                android:background="@color/white" />

            <View
                android:id="@+id/view_manual_est_selected_items_header2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/txtLabourSpareNote"
                android:layout_marginTop="23dp"
                android:background="@color/white" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>