<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/sparePartRow"
    
    android:orientation="horizontal" 
    >
    
    
    <View 
        android:layout_height="match_parent"
        android:layout_width="1dp"
        
        android:background="@color/white"/>

    <TextView
        android:id="@+id/spare_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ellipsize="end"
        android:padding="5dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/desc"
        android:textSize="10sp" />
    
    <View 
        android:layout_height="match_parent"
        android:layout_width="1dp"
        android:layout_marginLeft="10dp"
        android:background="@color/white"/>

    <TextView
        android:id="@+id/spare_qty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
       
        android:ellipsize="end"
        android:padding="5dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/default_qty"
        android:textSize="10sp" />
    <View 
        android:layout_height="match_parent"
        android:layout_width="1dp"
        android:layout_marginLeft="10dp"
        android:background="@color/white"/>

    
<TextView
        android:id="@+id/spare_uom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
         android:ellipsize="end"
        android:padding="5dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/uom"
        android:textSize="10sp" />
<View 
        android:layout_height="match_parent"
        android:layout_width="1dp"
        android:layout_marginLeft="10dp"
        android:background="@color/white"/>

    
    
    
<LinearLayout android:layout_width="80dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <CheckBox
        android:id="@+id/spare_select_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:button="@drawable/estimate_state_check"
        android:padding="5dp" 
        android:saveEnabled="true"
        
        />
    </LinearLayout>
    <View 
        android:layout_height="match_parent"
        android:layout_width="1dp"
        android:layout_marginLeft="10dp"
        android:background="@color/white"/>

</LinearLayout>
